fix margin misalignment + hover trick

--- a/plugins/chat/assets/stylesheets/common/chat-navbar.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-navbar.scss
@@ -32,16 +32,29 @@
   width: 100%;
   gap: 0.25rem;
   position: relative;
+  container-type: inline-size;
 
   .is-collapsed & {
-    padding-left: 1rem;
+    &__channel-title:not(:first-child) {
+      margin-left: 1rem;
+    }
 
-    &:hover {
-      .c-navbar__toggle-drawer-button {
-        color: var(--tertiary-hover);
+    &__toggle-drawer-button {
+      &:after {
+        @container (inline-size) {
+          content: "";
+          position: absolute;
+          height: 100%;
+          left: 0;
+          width: calc(100cqw - 2.3em + 1rem);
+        }
 
-        .d-icon {
-          color: inherit;
+        &:hover {
+          color: var(--tertiary-hover);
+
+          .d-icon {
+            color: inherit;
+          }
         }
       }
     }
